fix toList in table output